<?xml version="1.0"?>
<package format="3">
  <name>tb3_topic_nav</name>
  <version>0.0.1</version>
  <description>Minimal TurtleBot3 Gazebo and Nav2 bringup with topic-driven navigation goals.</description>

  <maintainer email="vidushi@example.com">vidushi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_navigation2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
